WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225451
video.currentSrc should not be reset when a new load errors
https://bugs.webkit.org/show_bug.cgi?id=225451
Summary
video.currentSrc should not be reset when a new load errors
Philip Jägenstedt
Reported
2021-05-06 04:58:45 PDT
A test for this in web-platform-tests fails in Safari, but passes in Chrome and Firefox:
https://wpt.fyi/results/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-currentSrc.html?run_id=5677336357765120&run_id=5721877584543744&run_id=5638047716605952&run_id=5718410715463680
Safari is failing this bit:
https://github.com/web-platform-tests/wpt/blob/6a96f5c7fe3c2fd837f1814fef4fac93ade8344e/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-currentSrc.html#L74-L81
The test is setting v.src = "
https://test:test/
which is an invalid URL. The spec for this is
https://html.spec.whatwg.org/multipage/media.html#concept-media-load-algorithm
, where the "If mode is attribute" will reach "If urlString was obtained successfully, set the currentSrc attribute to urlString." and *not* set currentSrc. There isn't anything else that updates currentSrc either. See
https://github.com/whatwg/html/issues/3988
for spec discussion around this.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-05-13 04:59:12 PDT
<
rdar://problem/77961629
>
Youssef Soliman
Comment 2
2022-05-16 15:33:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/652
EWS
Comment 3
2022-06-17 16:57:20 PDT
Committed
r295649
(
251654@main
): <
https://commits.webkit.org/251654@main
> Reviewed commits have been landed. Closing PR #652 and removing active labels.
EWS
Comment 4
2022-06-24 17:23:03 PDT
Committed
251841@main
(dbb1064e05e5): <
https://commits.webkit.org/251841@main
> Reviewed commits have been landed. Closing PR #1790 and removing active labels.
Ryan Haddad
Comment 5
2022-06-24 17:24:32 PDT
This was reverted to resolve
https://bugs.webkit.org/show_bug.cgi?id=241982
Youssef Soliman
Comment 6
2022-06-27 15:04:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1835
EWS
Comment 7
2022-06-27 18:38:56 PDT
Committed
251899@main
(de4124158812): <
https://commits.webkit.org/251899@main
> Reviewed commits have been landed. Closing PR #1835 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug