video.currentSrc should not be reset when a new load errors https://bugs.webkit.org/show_bug.cgi?id=225451

Patch by Youssef Soliman <youssefdevelops@gmail.com> on 2022-06-17
Reviewed by Jer Noble.

* LayoutTests/imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-currentSrc-expected.txt:
Covered by existing test which was previously failing.
* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::prepareForLoad):

Media test removed since this condition is already covered by the above WPT test.
* LayoutTests/media/video-currentsrc-cleared.html: Removed.
* LayoutTests/media/video-currentsrc-cleared-expected.txt: Removed.

Canonical link: https://commits.webkit.org/251654@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295649 268f45cc-cd09-0410-ab3c-d52691b4dbfc